# twitter-video-downloader

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/static/: index.html  main.js
downloader/: Cargo.toml  example-data.json
downloader/src/: lib.rs
